# lims

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  INTEGRATION_GAPS.md  LIMS_0-8-1.dev.html  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  tests_e2e.py
.github/workflows/: backend-ci.yml  backend-image-smoke.yml  backend-staging-image.yml  claude-code-review.yml  staging-image.yml
api/: router.py
apps/accounts/: admin.py  api.py  models.py  schemas.py  signals.py  tests.py
apps/commissions/: api.py  models.py  schemas.py  state_machine.py  tests.py  tests_api.py  tests_state_machine.py
apps/equipment/: admin.py  api.py  models.py  schemas.py  tests.py  tests_api.py
apps/experiments/: api.py  models.py  schemas.py  tests.py
apps/reports/: admin.py  api.py  tests_admin.py  tests_api.py
apps/web/: tests_dashboard_charts.py  urls.py  views.py
apps/wip/: admin.py  api.py  factories.py  models.py  schemas.py  tests.py  tests_api.py  tests_migration_backfills.py
backend/: .env.example  CLAUDE.md  openapi.json
backend/config/: settings.py
config/: settings.py
docs/: api-payload-mapping-backend-main.md  api-payload-mapping.md
frontend/: .prettierignore  .prettierrc.json  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: colors.ts  navigate.ts  types.ts
frontend/scripts/: triage-ts-nocheck.mjs
prds/: DESIGN.md  IMPLEMENTATION_PLAN.md
src/: api.js  fab.jsx  lab.jsx  login.jsx  mgr.jsx  primitives.jsx
(+204 files in other folders)
